<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#021024"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="537dp"
        android:layout_height="1170dp"
        android:contentDescription="@string/image"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/tvcapRP1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="426dp"
        android:layout_height="52dp"
        android:layout_marginTop="120dp"
        android:text="@string/tvcapRP3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/eTemail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/EditTextPersonName"
        tools:ignore="VisualLintBounds,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/eTpassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/eTconfirmpass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/EditTextPersonName"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginTop="64dp"
        android:autofillHints="username"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/eTusername"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:text="@string/btnregRP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tvcapRP4"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tvcapRP2"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="VisualLintBounds" />
</androidx.constraintlayout.widget.ConstraintLayout>