<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#021024"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="539dp"
        android:layout_height="1166dp"
        android:contentDescription="@string/image"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="352dp"
        android:layout_height="169dp"
        android:layout_marginBottom="944dp"
        android:text="@string/tVcapLP1"
        android:textColor="@color/white"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds,TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="176dp"
        android:layout_height="70dp"
        android:layout_marginBottom="944dp"
        android:text="@string/tVcapLP2"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds,TextSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tVcapLP3"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.15"
        tools:ignore="VisualLintBounds" />

    <EditText
        android:id="@+id/eTEmail"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/eTemail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="labelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/eTPassword"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/eTpassword"
        android:inputType="textPassword"
        android:textColorHint="#78909C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTEmail"
        tools:ignore="labelFor,TextContrastCheck" />

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button"
        android:text="@string/btnloginLP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTPassword" />

    <TextView
        android:id="@+id/tVfpLP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tVforgotpassLP"
        android:textColor="@color/purple_700"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTPassword" />

    <TextView
        android:id="@+id/tVhaLP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tVhaveaccLP"
        android:textColor="@color/purple_700"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsignin" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/tVsigninwithLP"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVhaLP" />

</androidx.constraintlayout.widget.ConstraintLayout>