<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#021024"
    tools:context=".Tugas3Activity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="545dp"
        android:layout_height="1186dp"
        android:contentDescription="@string/image"
        android:src="@drawable/bg1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="320dp"
        android:layout_height="98dp"
        android:layout_marginTop="116dp"
        android:text="@string/tVcapT3"
        android:textColor="@color/black"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <EditText
        android:id="@+id/eTpenerima"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="128dp"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:hint="@string/eTpenerima"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/eTsubjek"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:hint="@string/eTsubjek"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTpenerima"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <EditText
        android:id="@+id/eTpesan"
        android:layout_width="337dp"
        android:layout_height="223dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:hint="@string/eTpesan"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTsubjek"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/btnkirim"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:text="@string/btnkirim"
        android:background="@drawable/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTpesan"
        tools:ignore="VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>